--- a/styles/test.css
+++ b/styles/test.css
@@ -1,33 +1,40 @@
-.test-main-container {
-	width: 100%;
+.container {
 	height: 1000px;
-	background-color: green;
+	width: 100%;
 }
-
-.test-part1 {
-	width: 30%;
-	height: 50%;
-	background-color: blue;
+.row {
+	width: 100%;
 	float: left;
 }
-
-.test-part2 {
-	width: 30%;
-	height: 50%;
-	background-color: yellow;
+.col {
+	height: 100%;
 	float: left;
 }
-
-.test-part3 {
-	width: 40%;
-	height: 50%;
-	background-color: black;
-	float: left;
+.el-1 {
+	height: 33%;
+	//background-color: #176354;
 }
-
-.test-part4 {
-	width: 30%;
-	height: 50%;
-	background-color: white;
-	float: left;
+.el-2 {
+	width: 25%;
+	//background-color: #176354;
+}
+.el-3 {
+	width: 25%;
+	//background-color: #176354;
+}
+.el-4 {
+	width: 50%;
+	//background-color: #176354;
+}
+.el-5 {
+	height: 67%;
+	//background-color: #176354;
+}
+.el-6 {
+	width: 25%;
+	//background-color: #176354;
+}
+.el-7 {
+	width: 75%;
+	//background-color: #176354;
 }
