working automatization version. generated index.html

--- a/automatization/DivPositioning/automated-index.css
+++ b/automatization/DivPositioning/automated-index.css
@@ -12,13 +12,13 @@
 }
 .el-1 {
 	height: 15%;
-	//background-color: #275862;
+	//background-color: #4102129;
 }
 .el-2 {
 	width: 40%;
-	//background-color: #275862;
+	//background-color: #4102129;
 }
 .el-3 {
 	height: 25%;
-	//background-color: #275862;
+	//background-color: #4102129;
 }
