--- a/styles/common.css
+++ b/styles/common.css
@@ -1,8 +1,13 @@
 @import url('http://fonts.googleapis.com/css?family=Lobster');
 @import url('http://fonts.googleapis.com/css?family=Pacifico');
+@import url('http://fonts.googleapis.com/css?family=Oswald');
 
 html {
 	font-family: Lobster;
+}
+
+body {
+	//background-color: #ABCAEB;
 }
 
 .logo-container {
@@ -83,4 +88,30 @@ div.to-top a:hover {
 
 menu-buttons menu-button a {
 	color: red;
+}
+
+.thumbnail-div-pic {
+	width: 90%;
+	height: 90%;
+	margin: 5% 5% 5% 5%;
+	border-radius: 5px;
+}
+
+.div-pic {
+	width: 90%;
+	height: 25%;
+}
+
+.text-stroke {
+	text-shadow:
+		   3px 3px 0 #000,
+		 -1px -1px 0 #000,  
+		  1px -1px 0 #000,
+		  -1px 1px 0 #000,
+		   1px 1px 0 #000;
+}
+
+.fixed-part {
+	position: fixed;
+	top: 0;
 }
