--- a/styles/index.css
+++ b/styles/index.css
@@ -22,7 +22,7 @@
 }
 
 .main-menu-item {
-	font-size: 4vh;
+	font-size: 2vw;
 	//padding: 0.5vw 0 0 0;
 	color: black;
 	text-shadow: 1px 1px white;
@@ -34,13 +34,16 @@ div.main-menu-item a {
 }
 
 div.main-menu-item a:hover {
-	font-size: 4vh;
+	//font-size: 4vh;
 	margin-left: -10px;
 	margin-bottom: -10px;
 	text-decoration: none;
+	//color: #3284db;
+	background-color: black;
+	border-radius: 3px;
 	color: white;
 	text-shadow: 2px 2px black;
-	font-family: "Oswald";
+	//font-family: "Oswald";
 }
 
 .main-site-container {
@@ -51,89 +54,64 @@ div.main-menu-item a:hover {
 	//box-shadow: 10px 10px 10px #888888;
 }
 
-.list-header {
-	text-align: center;
-	font-size: 2vw;
-}
-
-.lists-nav-arrow {
-	width: 100%;
-	height: 100%;
-	cursor: pointer;
-}
-
-.lists-body {
-	border: inset 2px black;
-	border-radius: 5px;
-	width: 90%;
-	margin: 0% 5% 0% 5%;
-	overflow: scroll;
-}
-
 .list-container {
-	border: 15px solid transparent;
-	border-radius: 5px;
-    border-image: url("../images/index/main-border.png") 30 30 stretch;
 }
 
-.list-item-container {
-	width: 98%;
-	border: solid 1px black;
-	margin: 1% 1% 1% 1%;
+.list-title {
+	font-size: 3vw;
+	text-align: center;
+	color: white;
+}
+
+.list-item-body {
+	border: solid 3px #737373;
+	border-radius: 10px;
+}
+
+.list-item-body:hover {
+	background-color: black;
+	color: white;
+}
+
+.list-item-image-container {
+	
 }
 
 .list-item-title {
-	font-size: 25px;
-	text-align: center;
-	color: #3284DB;
+	font-size: 2vw;
+	color: white;
+}
+
+.list-item-upload-info {
+	font-size: 1vw;
+	color: #A8A8A8;
 }
 
 .list-item-description {
-	text-align: center;
 	font-family: "Oswald";
-	font-size: 15px;
-	margin-top: 5px;
 }
 
-.list-item-details {
-	text-align: right;
-	color: #3284DB;
-	cursor: pointer;
+.list-item-lower-section {
 }
 
-.details-container {
-	
+.list-item-comment-button {
+	background-color: yellow;
 }
 
-.details-title {
-	font-size: 5vh;
-	text-align: center;
-	padding-top: 5%;
-	color: #3284DB;
-	//text-shadow: 2px 2px 0px black;
-}
-
-.details-author-container {
-	
-}
-
-.details-author {
-	border: solid 3px black;
-	border-radius: 10px;
-	width: 95%;
+textarea {
+	width: 100%;
 	height: 100%;
-	margin: 0% 2.5% 0% 2.5%;
-	background-color: #3284DB;
-	box-shadow: 5px 5px 1px grey;
 	font-family: "Oswald";
-	font-size: 25px;
+	font-size: 0.8vw;
+	border: 1px solid black;
 }
 
-.details-body {
-	font-family: "Oswald";
-	text-align: justify;
+.list-item-details-section {
+	
 }
 
-.details-main {
-	//overflow: scroll;
+.list-item-details-section a {
+	text-decoration: none;
+	color: white;
+	font-size: vw;
 }
