--- a/styles/common.css
+++ b/styles/common.css
@@ -96,6 +96,7 @@ menu-buttons menu-button a {
 	height: 90%;
 	margin: 5% 5% 5% 5%;
 	border-radius: 5px;
+	border: solid 1px white;
 }
 
 .div-pic {
