--- a/styles/common.css
+++ b/styles/common.css
@@ -168,3 +168,43 @@ menu-buttons menu-button a {
 	position: fixed;
 	top: 0;
 }
+
+.invisible {
+	visibility: invisible;
+	display: none;
+}
+
+.visible {
+	visibility: visible;
+}
+
+.search-box {
+	height: 25%;
+	width: 100%;
+	background-color: black;
+	color: white;
+	font-weight: 700;
+}
+
+.icon-image {
+	height: 15px;
+	width: 15px;
+}
+
+.search-icon-image {
+	height: 25px;
+	width: 25px;
+}
+
+.search-help-row {
+	border: 1px solid black;
+	border-bottom: 0;
+	background: white;
+	margin: 0;
+	width: 100%;
+	height: 25%;
+}
+
+.search-help-row:hover {
+	background-color: grey;
+}
