--- a/styles/contact.css
+++ b/styles/contact.css
@@ -26,3 +26,39 @@
 	width: 100%;
 	height: 100%;
 }
+
+.input-invalid {
+	border: 1px solid red;
+	color: red;
+}
+
+.input-valid {
+	border: initial;
+}
+
+.error-message {
+	color: red;
+	font-family: Oswald;
+	font-size: 15px;
+	text-shadow: 0px 0px #ff0000;
+}
+
+.valid-message {
+	color: green;
+	font-family: Oswald;
+	font-size: 15px;
+	text-shadow: 0px 0px #ff0000;
+}
+
+.icon-image {
+	height: 15px;
+	width: 15px;
+}
+
+.invalid-input-border {
+	border: 1px solid red;
+}
+
+.valid-input-border {
+	border: 1px solid green;
+}
