--- a/styles/common.css
+++ b/styles/common.css
@@ -55,6 +55,7 @@ body {
 div.main-menu-item a {
 	text-decoration: none;
 	color: inherit;
+	cursor: pointer;
 }
 
 div.main-menu-item a:hover {
@@ -207,4 +208,13 @@ menu-buttons menu-button a {
 
 .search-help-row:hover {
 	background-color: grey;
+}
+
+.wide-input {
+	width: 50%;
+}
+
+.artwork-preview {
+	width: 50px;
+	height: 50px;
 }
