--- a/styles/common.css
+++ b/styles/common.css
@@ -1,6 +1,7 @@
 @import url('http://fonts.googleapis.com/css?family=Lobster');
 @import url('http://fonts.googleapis.com/css?family=Pacifico');
 @import url('http://fonts.googleapis.com/css?family=Oswald');
+@import url('http://fonts.googleapis.com/css?family=Lora');
 
 html {
 	font-family: Lobster;
@@ -217,4 +218,26 @@ menu-buttons menu-button a {
 .artwork-preview {
 	width: 50px;
 	height: 50px;
+}
+
+.form-data-container {
+	font-family: Oswald;
+}
+
+.form-data {
+	
+}
+
+span form-data {
+
+}
+
+.form-data-title {
+	color: red;
+	font-family: Oswald;
+	margin-left: 25%;
+}
+
+.form-data-text {
+	color: grey;
 }
