--- a/styles/common.css
+++ b/styles/common.css
@@ -241,3 +241,9 @@ span form-data {
 .form-data-text {
 	color: grey;
 }
+
+.simple-bordered-container {
+	border: 2px solid #27A3CC;
+	background-color: #DEE2E3;
+	margin-bottom: 5%;
+}
